--- a/app/src/main/res/layout/item_multi.xml
+++ b/app/src/main/res/layout/item_multi.xml
@@ -8,7 +8,10 @@
 
     <include layout="@layout/layout_item_user" />
 
-    <include layout="@layout/item_source" />
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/recSource"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content" />
 
     <include layout="@layout/layout_item_action" />
 
