--- a/app/src/main/res/layout/item_multi.xml
+++ b/app/src/main/res/layout/item_multi.xml
@@ -11,7 +11,8 @@
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/recSource"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content" />
+        android:layout_height="wrap_content"
+        android:overScrollMode="never" />
 
     <include layout="@layout/layout_item_action" />
 
